--- a/src/pages/ExpenseTracker/ExpenseTracker.css
+++ b/src/pages/ExpenseTracker/ExpenseTracker.css
@@ -70,7 +70,6 @@ textarea.form-control {
     transform: translateY(-2px); /* Slight lift effect */
 }
 
-
 /*output page css */
 /* Custom table styling */
 .custom-table {
@@ -156,4 +155,11 @@ textarea.form-control {
     border-color: #007bff;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
     outline: none;
+}
+
+.truncate-text {
+    white-space: nowrap; /* Prevent text from wrapping */
+    overflow: hidden; /* Hide overflowed text */
+    text-overflow: ellipsis; /* Show ellipsis when text overflows */
+    max-width: 50px; /* Set a maximum width for the column */
 }
