--- a/src/pages/setting/SettingsPage.css
+++ b/src/pages/setting/SettingsPage.css
@@ -262,7 +262,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
+    display: flex !important;
     justify-content: center;
     align-items: center;
 }
